--- a/sway/sway/config
+++ b/sway/sway/config
@@ -124,7 +124,7 @@ bindsym $mod+control+8 move container to workspace number 8
 bindsym $mod+control+9 move container to workspace number 9
 bindsym $mod+control+m move container to workspace $ws_main
 # change layout mode for the focused container
-bindsym $mod+c split vertical; layout stacking
+bindsym $mod+c split horizontal
 bindsym $mod+e layout toggle split
 bindsym $mod+s layout toggle stacking splitv
 bindsym $mod+w layout toggle tabbed splitv
